View Issue Details

IDProjectCategoryView StatusLast Update
0025663Open CASCADEOCCT:Modeling Algorithmspublic2015-05-14 15:33
ReporteramlAssigned Toapv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025663: Expand math_PSO class description
DescriptionDescription of math_PSO class contains only link to article and information about parameters.

It is necessary to add the following sections:

1) Information about algorithm "step by step" - this will give user PSO understanding.
2) Information about pros and cons - this will determine domain of applicability.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-01-12 08:47

administrator   ~0035940

Branch CR25663 has been created by aml.

SHA-1: c6e79394f9a8f4a3acfb7e3ac1dd5bdd328bffaf


Detailed log of new commits:

Author: aml
Date: Fri Dec 26 12:56:35 2014 +0300

    0025663: Expand math_PSO class description
    
    math_PSO class description extended.

aml

2015-01-12 08:50

developer   ~0035941

Dear msv,
Please check current state of branch CR25663.

Regression testing not needed because only comments has changed.

msv

2015-01-12 11:39

developer   ~0035947

OK.
No need in testing.

git

2015-01-16 17:36

administrator   ~0036161

Branch CR25663 has been updated forcibly by apv.

SHA-1: 55b05039a47b54a321163aa20c54a628125be1f8

apv

2015-01-16 17:36

tester   ~0036162

Branch CR25663 has been rebased on the current master

apv

2015-01-21 12:13

tester   ~0036307

Dear BugMaster,

Branch CR25663 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms.
SHA-1: 55b05039a47b54a321163aa20c54a628125be1f8

Number of compiler warnings:
occt component:
   Linux: 18 (18 on master)
   Windows: 0 (0 on master)
products component :
   Linux: 11 (11 on master)
   Windows: 1 (1 on master)

git

2015-01-26 12:31

administrator   ~0036516

Branch CR25663 has been deleted by inv.

SHA-1: 55b05039a47b54a321163aa20c54a628125be1f8

Related Changesets

occt: master 55b05039

2014-12-26 09:56:35

aml


Committer: apv Details Diff
0025663: Expand math_PSO class description

math_PSO class description extended.
Affected Issues
0025663
mod - src/math/math_PSO.hxx Diff File

Issue History

Date Modified Username Field Change
2014-12-26 12:04 aml New Issue
2014-12-26 12:04 aml Assigned To => aml
2015-01-12 08:47 git Note Added: 0035940
2015-01-12 08:50 aml Note Added: 0035941
2015-01-12 08:50 aml Assigned To aml => msv
2015-01-12 08:50 aml Status new => resolved
2015-01-12 11:39 msv Note Added: 0035947
2015-01-12 11:39 msv Assigned To msv => bugmaster
2015-01-12 11:39 msv Status resolved => reviewed
2015-01-16 17:05 apv Assigned To bugmaster => apv
2015-01-16 17:36 git Note Added: 0036161
2015-01-16 17:36 apv Note Added: 0036162
2015-01-21 12:11 apv Test case number => Not needed
2015-01-21 12:13 apv Note Added: 0036307
2015-01-21 12:13 apv Assigned To apv => bugmaster
2015-01-21 12:13 apv Status reviewed => tested
2015-01-23 16:19 apv Changeset attached => occt master 55b05039
2015-01-23 16:19 apv Assigned To bugmaster => apv
2015-01-23 16:19 apv Status tested => verified
2015-01-23 16:19 apv Resolution open => fixed
2015-01-26 12:31 git Note Added: 0036516
2015-05-14 15:29 aiv Status verified => closed
2015-05-14 15:33 aiv Fixed in Version => 6.9.0