0025663: Expand math_PSO class description

math_PSO class description extended.